--- a/cv.qmd
+++ b/cv.qmd
@@ -2,4 +2,4 @@
 title: CV
 ---
 
-<embed src="../files/nopersonalinfo_Jan2025EvannsMoralesCuadrado_CV.pdf" type="application/pdf" width=800 height=600/>
+<embed src="files/nopersonalinfo_Jan2025EvannsMoralesCuadrado_CV.pdf" type="application/pdf" width=800 height=600/>
