--- a/about/index.qmd
+++ b/about/index.qmd
@@ -1,2 +1,3 @@
 ## About Me
-This is where I might tell you something deep, beautiful, and personal about myself when I have the chance to write something interesting :)
+
+Writer's block goes here.
