--- a/blog/index.qmd
+++ b/blog/index.qmd
@@ -1,5 +1,15 @@
 ---
 title: "Research Blog"
+listing:
+  contents: posts
+  sort: "date desc"
+  type: default
+  categories: true
+  sort-ui: false
+  filter-ui: true
+  feed: true
+page-layout: full
+title-block-banner: true
 ---
 
 I hope to fill this section with explanatory pieces on important topics in the field of robotics/control systems theory.
