troubleshooting blog issues and publications list

--- a/blog/posts/2025-09-29-QuadrotorDynamics/index.qmd
+++ b/blog/posts/2025-09-29-QuadrotorDynamics/index.qmd
@@ -9,7 +9,7 @@ bibliography: references.bib
 csl: https://www.zotero.org/styles/ieee
 ---
 
-# I'll make this more in-depth and polished later, but here is a start.
+### I'll make this more in-depth and polished later, but here is a start.
 
 
 ## Introduction
