--- a/cv/index.qmd
+++ b/cv/index.qmd
@@ -1,7 +1,9 @@
 ---
 title: CV & Resume
 ---
-(Last updated: September 2025)
+(Last updated: November 2025)
+
+<!-- In the future I want to do it like this: https://www.cynthiahqy.com/posts/cv-html-pdf/ -->
 
 Here's my one page (front and back) resume:
 <embed src="../files/RESUME_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" type="application/pdf" width=800 height=600/>
