--- a/index.qmd
+++ b/index.qmd
@@ -21,6 +21,7 @@ about:
 # Welcome to My Research Site!
 
 egm \[at\] gatech.edu
+evannsmc \[at\] gmail.com
 
 I am a Robotics/ECE Ph.D student in the Formal Methods & Autonomous Control of Transportation Systems ([FACTS](https://coogan.ece.gatech.edu/)) Lab at the Georgia Institute of Technology under the supervision of Dr. Samuel Coogan.
 
