--- a/community/index.qmd
+++ b/community/index.qmd
@@ -1,13 +1,16 @@
 ---
-title: "Community & Outreach"
+title: "Community / Outreach / Hobbies"
 page-layout: full
 title-block-banner: true
 ---
 
-<div style="display: flex; align-items: center; gap: 20px; margin-bottom: 30px;">
-  <img src="../files/BORI/bori_logo.jpg" alt="BORI Logo" style="width: 200px; height: auto;"/>
-  <h2 style="margin: 0; flex: 1;">BORI (Boricuas Organized for Impact)</h2>
-</div>
+<details style="margin-bottom: 30px; border: 1px solid #ddd; border-radius: 8px; padding: 20px;">
+<summary style="cursor: pointer; font-size: 1.5em; font-weight: bold; display: flex; align-items: center; gap: 20px;">
+  <img src="../files/BORI/bori_logo.jpg" alt="BORI Logo" style="width: 80px; height: auto;"/>
+  <span>BORI (Boricuas Organized for Impact)</span>
+</summary>
+
+<div style="margin-top: 20px;">
 
 ::: {style="display: flex; align-items: flex-start; gap: 30px; margin-bottom: 20px;"}
 ::: {style="flex: 1;"}
@@ -16,9 +19,16 @@ I helped co-found **BORI (Boricuas Organized for Impact)**, a student organizati
 *Photos from our events will be added soon!*
 :::
 
-::: {style="flex: 0 0 400px;"}
-<img src="../files/BORI/BORI_cofounders.jpg" alt="BORI Co-founders" style="width: 100%; height: auto; border-radius: 8px;"/>
-<p style="font-style: italic; margin-top: 10px; text-align: center; font-size: 0.9em;">BORI Co-founders (left to right): Gustavo, Camelia, Evanns</p>
+::: {style="display: flex; gap: 15px; align-items: flex-end;"}
+<div style="flex: 0 0 400px; display: flex; flex-direction: column;">
+  <img src="../files/BORI/BORI_cofounders.jpg" alt="BORI Co-founders" style="width: 100%; height: auto; border-radius: 8px;"/>
+  <p style="font-style: italic; margin-top: 10px; text-align: center; font-size: 0.9em; margin-bottom: 0;">BORI Co-founders (left to right): Gustavo, Camelia, Evanns</p>
+</div>
+
+<div style="flex: 0 0 150px; display: flex; flex-direction: column;">
+  <img src="../files/BORI/mascot_coqui_coquito.webp" alt="BORI Mascot - Coqui with Coquito" style="width: 100%; object-fit: cover; border-radius: 8px; flex-grow: 1;"/>
+  <p style="font-style: italic; margin-top: 10px; text-align: center; font-size: 0.85em; margin-bottom: 0;">Our mascot: Coqui with Coquito</p>
+</div>
 :::
 :::
 
@@ -97,3 +107,44 @@ I helped co-found **BORI (Boricuas Organized for Impact)**, a student organizati
 - Leche evaporada, leche condensada, crema de coco, canela molida, vainilla, botellas de cristal para que la gente se lleve el coquito que han hecho
 
 <strong>Coffee/Chocolate Event with BRASA: (TBD)</strong>
+
+</div>
+</details>
+
+<details style="margin-bottom: 30px; border: 1px solid #ddd; border-radius: 8px; padding: 20px;">
+<summary style="cursor: pointer; font-size: 1.5em; font-weight: bold;">
+  🍳 Cooking
+</summary>
+
+<div style="margin-top: 20px;">
+
+I've always had a passion for cooking, especially exploring different cuisines and experimenting with traditional recipes. From mastering Puerto Rican classics to trying new international dishes, the kitchen is my creative space.
+
+**Favorite dishes to make:**
+- Traditional Puerto Rican cuisine (arroz con gandules, pernil, pasteles)
+- Homemade pasta and Italian dishes
+- Experimental fusion recipes
+
+*More details and photos coming soon!*
+
+</div>
+</details>
+
+<details style="margin-bottom: 30px; border: 1px solid #ddd; border-radius: 8px; padding: 20px;">
+<summary style="cursor: pointer; font-size: 1.5em; font-weight: bold;">
+  💃 Dance
+</summary>
+
+<div style="margin-top: 20px;">
+
+Dance has been an important part of my life, providing both creative expression and a way to connect with my culture. I enjoy various styles and love sharing this passion with others.
+
+**Dance styles I practice:**
+- Salsa
+- Bachata
+- Contemporary
+
+*More details and photos coming soon!*
+
+</div>
+</details>
