working on html version and download buttons

--- a/cv/index.qmd
+++ b/cv/index.qmd
@@ -3,317 +3,28 @@ title: CV & Resume
 ---
 *(Last updated: February 2026)*
 
----
+:::: {.columns .gap-4}
 
-## Resume {#resume-pdf}
+::: {.column width="50%"}
+### Resume
 
-::: {.d-flex .gap-2 .mb-3}
-[View HTML Resume ↓](#resume-html){.btn .btn-sm .btn-outline-primary}
+::: {.d-flex .gap-2 .mb-2}
+[View HTML Resume](resume-html.qmd){.btn .btn-sm .btn-outline-primary}
 <a href="../files/RESUME_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" class="btn btn-sm btn-outline-secondary" download>Download PDF</a>
 :::
 
-<embed src="../files/RESUME_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" type="application/pdf" width=800 height=600/>
+<embed src="../files/RESUME_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" type="application/pdf" style="width:100%; height:700px;"/>
+:::
 
----
+::: {.column width="50%"}
+### Full CV
 
-## Full CV {#cv-pdf}
-
-::: {.d-flex .gap-2 .mb-3}
-[View HTML CV ↓](#cv-html){.btn .btn-sm .btn-outline-primary}
+::: {.d-flex .gap-2 .mb-2}
+[View HTML CV](cv-html.qmd){.btn .btn-sm .btn-outline-primary}
 <a href="../files/CV_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" class="btn btn-sm btn-outline-secondary" download>Download PDF</a>
 :::
 
-<embed src="../files/CV_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" type="application/pdf" width=800 height=600/>
-
----
-
-## HTML Resume {#resume-html}
-
-::: {.d-flex .gap-2 .mb-3}
-[↑ Back to PDF Resume](#resume-pdf){.btn .btn-sm .btn-outline-primary}
-<a href="../files/RESUME_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" class="btn btn-sm btn-outline-secondary" download>Download PDF</a>
+<embed src="../files/CV_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" type="application/pdf" style="width:100%; height:700px;"/>
 :::
 
----
-
-**Evanns Morales-Cuadrado** | Robotics PhD Student | Georgia Institute of Technology · U.S. Citizen
-
-| | |
-|---|---|
-| **Email** | [evannsmc@gmail.com](mailto:evannsmc@gmail.com) |
-| **Website** | [evannsmc.com](https://www.evannsmc.com/) |
-| **GitHub** | [github.com/evannsm](https://github.com/evannsm) |
-| **LinkedIn** | [linkedin.com/in/evanns-morales](https://www.linkedin.com/in/evanns-morales/) |
-
-#### Technical Skills
-
-- **Programming Languages:** Python, C/C++, Matlab/Simulink
-- **Frameworks & Libraries:** JAX, PyTorch, acados, CasADi, ROS 2, PX4, ArduPilot
-- **Development & DevOps Tools:** Docker, Continuous Integration, Git/GitHub
-- **Hardware & Experimentation:** UAV assembly, repair, and deployment
-- **Motion-Capture:** OptiTrack and Vicon
-- **Languages:** Spanish (Native), English (Native)
-
-#### Education
-
-**Georgia Institute of Technology** | 2022–2027\
-Ph.D. in Robotics
-
-- GPA: 4.0/4.0
-- Advisor: Dr. Samuel Coogan
-- Goizueta Fellow
-
-**University of Texas at Arlington** | 2018–2022\
-Honors Bachelor of Science in Electrical Engineering\
-*Minor in Mathematics · Minor in Physics · Certificate in Unmanned Vehicle Systems*
-
-- GPA: 3.9/4.0 — Summa Cum Laude
-- Full National Merit Scholarship Awarded
-- Electrical Engineering Honors Scholar
-
-#### Work Experience
-
-**Graduate Research Assistant** — FACTS Lab, Georgia Institute of Technology | Atlanta, GA\
-*August 2022 – Present*
-
-- Advised by Dr. Samuel Coogan
-- Implemented novel aggressive tracking control methods on quadrotor hardware
-- Developed novel nonlinear control methods for safe autonomy
-- Published and presented novel research at top conferences and journals in the fields of robotics and control theory
-
-**Teaching Assistant** — Vertically Integrated Project in Robotics, Georgia Institute of Technology | Atlanta, GA\
-*January 2024 – Present*
-
-- Aided professor in his instruction of this research-based course
-- Provided promising undergraduates with guidance performing applied research in the field of robotics
-- Taught control theoretical concepts in an accessible manner for undergraduates
-
-**Research Assistant** — Autonomous Systems Lab, University of Texas at Arlington | Arlington, TX\
-*November 2021 – May 2022*
-
-- Advised by Dr. Frank Lewis
-- Received personal mentorship from a leading researcher in the field of controls and reinforcement learning (ranked 12th in the USA and 23rd in the world during my time in his lab)
-- Aided graduate students on reinforcement learning research applied to quadrotor control
-
-**Teaching Assistant** — Graduate-Level Intelligent Systems Course, University of Texas at Arlington | Arlington, TX\
-*January 2022 – May 2022*
-
-- Aided professor in his instruction of the course
-- Hosted review sessions for students in preparation for exams
-- Gained teaching experience in a graduate-level course while still an undergraduate
-
-**Research Assistant** — Dynamical Networks and Control Lab, University of Texas at Arlington | Arlington, TX\
-*October 2019 – May 2022*
-
-- Advised by Dr. Yan Wan
-- Gained experience with Robot Operating System (ROS), OpenCV, and path planning
-- Original research in learning-based minimum time and energy path-planning for multi-vehicle systems
-
-#### Selected Publications
-
-1. **E. Morales-Cuadrado**, C. Llanes, Y. Wardi and S. Coogan, "Newton-Raphson Flow for Aggressive Quadrotor Tracking Control." *2024 American Control Conference (ACC).*
-2. **E. Morales-Cuadrado**, L. Baird, Y. Wardi and S. Coogan, "Lightweight Tracking Control for Computationally Constrained Aerial Systems with the Newton-Raphson Method." Submitted to *IEEE Transactions on Control Systems Technology.* arXiv preprint available. *(under revision)*
-3. L. Baird, **E. Morales-Cuadrado**, and S. Coogan, "Runtime Assurance for Uncertain Systems from Interval Signal Temporal Logic." Submitted to *IEEE Transactions on Robotics.* *(under revision)*
-
-#### Research Interests
-
-:::: {.columns}
-::: {.column width="50%"}
-- Safe Autonomy
-- Hardware Deployment
-- Unmanned Ground and Aerial Vehicles
-:::
-::: {.column width="50%"}
-- Advanced Nonlinear Control
-- Learning-Based Control
-- Trajectory Generation and Planning
-:::
 ::::
-
-#### Open-Source Contributions
-
-- **PX4 Autopilot:** Contributed documentation improvements to the official PX4 Autopilot manual.
-- **Vicon4PX4:** Developed and open-sourced a ROS 2 C++ Vicon–PX4 interface enabling external vision fusion for indoor quadrotor flight experiments; adopted and showcased by Georgia Tech's Indoor Flight Lab as part of its official codebase. Also created a parallel package for OptiTrack motion capture systems.
-
-#### Service
-
-**Co-Founder and President of Puerto Rican Student Association** | Georgia Institute of Technology | Atlanta, GA\
-*August 2024 – Present*
-
-- Addressed the need for an organization to help Puerto Rican students feel at home and stay connected to our culture
-- Formed a three-member co-founder board and identified a faculty advisor
-- Raised funds for the organization and recruited members from campus
-- Hosted professional, social, and cultural events to meet the needs of the growing Puerto Rican student population at Georgia Tech
-
-#### Honors & Awards
-
-| Award | Date |
-|---|---|
-| Top-3 Finalist at a Deep Learning Research Symposium | November 2023 |
-| Goizueta Fellowship at Georgia Tech | August 2022 |
-| Summa Cum Laude Honors at University of Texas at Arlington | May 2022 |
-| Electrical Engineering Honors Scholar at University of Texas at Arlington | December 2021 |
-| IEEE-HKN International Electrical Engineering Honor Society Membership | August 2021 |
-| Chance Vought Engineering and Science Endowment Scholarship | August 2020 |
-| National Hispanic Scholar | March 2018 |
-| National Merit Scholar | March 2018 |
-
----
-
-## HTML CV {#cv-html}
-
-::: {.d-flex .gap-2 .mb-3}
-[↑ Back to PDF CV](#cv-pdf){.btn .btn-sm .btn-outline-primary}
-<a href="../files/CV_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" class="btn btn-sm btn-outline-secondary" download>Download PDF</a>
-:::
-
----
-
-**Evanns Morales-Cuadrado** | Robotics PhD Student | Georgia Institute of Technology · U.S. Citizen
-
-| | |
-|---|---|
-| **Email** | [evannsmc@gmail.com](mailto:evannsmc@gmail.com) |
-| **Website** | [evannsmc.com](https://www.evannsmc.com/) |
-| **GitHub** | [github.com/evannsm](https://github.com/evannsm) |
-| **LinkedIn** | [linkedin.com/in/evanns-morales](https://www.linkedin.com/in/evanns-morales/) |
-
-#### Technical Skills
-
-- **Programming Languages:** Python, C/C++, Matlab/Simulink
-- **Frameworks & Libraries:** JAX, PyTorch, acados, CasADi, ROS 2, PX4, ArduPilot
-- **Development & DevOps Tools:** Docker, Continuous Integration, Git/GitHub
-- **Hardware & Experimentation:** UAV assembly, repair, and deployment
-- **Motion-Capture:** OptiTrack and Vicon
-- **Languages:** Spanish (Native), English (Native)
-
-#### Education
-
-**Georgia Institute of Technology** | 2022–2027\
-Ph.D. in Robotics
-
-- GPA: 4.0/4.0
-- Advisor: Dr. Samuel Coogan
-- Goizueta Fellow
-
-**University of Texas at Arlington** | 2018–2022\
-Honors Bachelor of Science in Electrical Engineering\
-*Minor in Mathematics · Minor in Physics · Certificate in Unmanned Vehicle Systems*
-
-- GPA: 3.9/4.0 — Summa Cum Laude
-- Full National Merit Scholarship Awarded
-- Electrical Engineering Honors Scholar
-
-#### Work Experience
-
-**Graduate Research Assistant** — FACTS Lab, Georgia Institute of Technology | Atlanta, GA\
-*August 2022 – Present*
-
-- Advised by Dr. Samuel Coogan
-- Implemented novel aggressive tracking control methods on quadrotor hardware
-- Developed novel nonlinear control methods for safe autonomy
-- Published and presented novel research at top conferences and journals in the fields of robotics and control theory
-
-**Teaching Assistant** — Vertically Integrated Project in Robotics, Georgia Institute of Technology | Atlanta, GA\
-*January 2024 – Present*
-
-- Aided professor in his instruction of this research-based course
-- Provided promising undergraduates with guidance performing applied research in the field of robotics
-- Taught control theoretical concepts in an accessible manner for undergraduates
-
-**Research Assistant** — Autonomous Systems Lab, University of Texas at Arlington | Arlington, TX\
-*November 2021 – May 2022*
-
-- Advised by Dr. Frank Lewis
-- Received personal mentorship from a leading researcher in the field of controls and reinforcement learning (ranked 12th in the USA and 23rd in the world during my time in his lab)
-- Aided graduate students on reinforcement learning research applied to quadrotor control
-
-**Teaching Assistant** — Graduate-Level Intelligent Systems Course, University of Texas at Arlington | Arlington, TX\
-*January 2022 – May 2022*
-
-- Aided professor in his instruction of the course
-- Hosted review sessions for students in preparation for exams
-- Gained teaching experience in a graduate-level course while still an undergraduate
-
-**Research Assistant** — Dynamical Networks and Control Lab, University of Texas at Arlington | Arlington, TX\
-*October 2019 – May 2022*
-
-- Advised by Dr. Yan Wan
-- Gained experience with Robot Operating System (ROS), OpenCV, and path planning
-- Original research in learning-based minimum time and energy path-planning for multi-vehicle systems
-
-#### Selected Publications
-
-1. **E. Morales-Cuadrado**, C. Llanes, Y. Wardi and S. Coogan, "Newton-Raphson Flow for Aggressive Quadrotor Tracking Control." *2024 American Control Conference (ACC).*
-2. **E. Morales-Cuadrado**, L. Baird, Y. Wardi and S. Coogan, "Lightweight Tracking Control for Computationally Constrained Aerial Systems with the Newton-Raphson Method." Submitted to *IEEE Transactions on Control Systems Technology.* arXiv preprint available. *(under revision)*
-3. L. Baird, **E. Morales-Cuadrado**, and S. Coogan, "Runtime Assurance for Uncertain Systems from Interval Signal Temporal Logic." Submitted to *IEEE Transactions on Robotics.* *(under revision)*
-
-#### Research Interests
-
-:::: {.columns}
-::: {.column width="50%"}
-- Safe Autonomy
-- Hardware Deployment
-- Unmanned Ground and Aerial Vehicles
-:::
-::: {.column width="50%"}
-- Advanced Nonlinear Control
-- Learning-Based Control
-- Trajectory Generation and Planning
-:::
-::::
-
-#### Open-Source Contributions
-
-- **PX4 Autopilot:** Contributed documentation improvements to the official PX4 Autopilot manual.
-- **Vicon4PX4:** Developed and open-sourced a ROS 2 C++ Vicon–PX4 interface enabling external vision fusion for indoor quadrotor flight experiments; adopted and showcased by Georgia Tech's Indoor Flight Lab as part of its official codebase. Also created a parallel package for OptiTrack motion capture systems.
-
-#### Service
-
-**Co-Founder and President of Puerto Rican Student Association** | Georgia Institute of Technology | Atlanta, GA\
-*August 2024 – Present*
-
-- Addressed the need for an organization to help Puerto Rican students feel at home and stay connected to our culture
-- Formed a three-member co-founder board and identified a faculty advisor
-- Raised funds for the organization and recruited members from campus
-- Hosted professional, social, and cultural events to meet the needs of the growing Puerto Rican student population at Georgia Tech
-
-**Undergraduate Research Mentor** | University of Texas at Arlington | Arlington, TX\
-*August 2021 – May 2022*
-
-- As the lead undergraduate student in Dr. Frank Lewis' Autonomous Systems Lab, mentored junior undergrads in controls research and guided them on a research project in ground vehicle control
-- Guided students in Robot Operating System, Python, Linux, and Control Systems
-
-**Teaching Assistant** — Graduate-Level Intelligent Systems Course | University of Texas at Arlington | Arlington, TX\
-*January 2022 – May 2022*
-
-- Aided professor in his instruction of the course
-- Hosted review sessions for students in preparation for exams
-- Graded homeworks, exams, and projects
-- Gained teaching experience in a graduate-level course while still an undergraduate
-
-**Eta Kappa Nu Public Relations Chair & Circuits I Tutor** | University of Texas at Arlington | Arlington, TX\
-*August 2020 – May 2022*
-
-- Executive board member of UT Arlington's IEEE-HKN chapter
-- In charge of social media advertising for honor society's events and outreach initiatives for the electrical engineering student body
-- Volunteered to provide free tutoring as a service to electrical engineering students in the Circuits I course
-
-#### Honors & Awards
-
-| Award | Date |
-|---|---|
-| Top-3 Finalist at a Deep Learning Research Symposium | November 2023 |
-| Goizueta Fellowship at Georgia Tech | August 2022 |
-| Summa Cum Laude Honors at University of Texas at Arlington | May 2022 |
-| Honors College Degree Requirements at University of Texas at Arlington | December 2021 |
-| Electrical Engineering Honors Scholar at University of Texas at Arlington | December 2021 |
-| IEEE-HKN International Electrical Engineering Honor Society Membership | August 2021 |
-| Research Experience for Undergraduates Fellowship Recipient | August 2020 |
-| Chance Vought Engineering and Science Endowment Scholarship | August 2020 |
-| Toray Composite Materials America Inc. Sons and Daughters Scholarship | May 2019 |
-| James E. Casey Scholarship Recipient | January 2019 |
-| James R. Hoffa Memorial Scholarship Recipient | May 2018 |
-| Grapevine, TX Rotary Club Scholarship Recipient | May 2018 |
-| National Hispanic Scholar | March 2018 |
-| National Merit Scholar | March 2018 |
