--- a/cv/index.qmd
+++ b/cv/index.qmd
@@ -3,9 +3,6 @@ title: CV & Resume
 ---
 *(Last updated: February 2026)*
 
-:::: {.columns .gap-4}
-
-::: {.column width="50%"}
 ### Resume
 
 ::: {.d-flex .gap-2 .mb-2}
@@ -13,10 +10,10 @@ title: CV & Resume
 <a href="../files/RESUME_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" class="btn btn-sm btn-outline-secondary" download>Download PDF</a>
 :::
 
-<embed src="../files/RESUME_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" type="application/pdf" style="width:100%; height:700px;"/>
-:::
+<embed src="../files/RESUME_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" type="application/pdf" width=800 height=600/>
 
-::: {.column width="50%"}
+---
+
 ### Full CV
 
 ::: {.d-flex .gap-2 .mb-2}
@@ -24,7 +21,4 @@ title: CV & Resume
 <a href="../files/CV_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" class="btn btn-sm btn-outline-secondary" download>Download PDF</a>
 :::
 
-<embed src="../files/CV_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" type="application/pdf" style="width:100%; height:700px;"/>
-:::
-
-::::
+<embed src="../files/CV_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" type="application/pdf" width=800 height=600/>
