--- a/cv/_sections/service-cv.qmd
+++ b/cv/_sections/service-cv.qmd
@@ -1,7 +1,7 @@
 ### Service
 
 **Co-Founder and President of Puerto Rican Student Association** | Georgia Institute of Technology | Atlanta, GA\
-*August 2024 – Present*
+*August 2024 - Present*
 
 - Addressed the need for an organization to help Puerto Rican students feel at home and stay connected to our culture
 - Formed a three-member co-founder board and identified a faculty advisor
@@ -9,13 +9,13 @@
 - Hosted professional, social, and cultural events to meet the needs of the growing Puerto Rican student population at Georgia Tech
 
 **Undergraduate Research Mentor** | University of Texas at Arlington | Arlington, TX\
-*August 2021 – May 2022*
+*August 2021 - May 2022*
 
-- As the lead undergraduate student in Dr. Frank Lewis' Autonomous Systems Lab, mentored junior undergrads in controls research and guided them on a research project in ground vehicle control
+- As the lead undergraduate student Dr. Frank Lewis' Autonomous Systems Lab, I mentored junior undergrads in controls research and guided them on a research project in ground vehicle control
 - Guided students in Robot Operating System, Python, Linux, and Control Systems
 
 **Teaching Assistant** — Graduate-Level Intelligent Systems Course | University of Texas at Arlington | Arlington, TX\
-*January 2022 – May 2022*
+*January 2022 - May 2022*
 
 - Aided professor in his instruction of the course
 - Hosted review sessions for students in preparation for exams
@@ -23,7 +23,7 @@
 - Gained teaching experience in a graduate-level course while still an undergraduate
 
 **Eta Kappa Nu Public Relations Chair & Circuits I Tutor** | University of Texas at Arlington | Arlington, TX\
-*August 2020 – May 2022*
+*August 2020 - May 2022*
 
 - Executive board member of UT Arlington's IEEE-HKN chapter
 - In charge of social media advertising for honor society's events and outreach initiatives for the electrical engineering student body
