--- a/cv/_sections/service-resume.qmd
+++ b/cv/_sections/service-resume.qmd
@@ -1,7 +1,7 @@
 ### Service
 
 **Co-Founder and President of Puerto Rican Student Association** | Georgia Institute of Technology | Atlanta, GA\
-*August 2024 – Present*
+*August 2024 - Present*
 
 - Addressed the need for an organization to help Puerto Rican students feel at home and stay connected to our culture
 - Formed a three-member co-founder board and identified a faculty advisor
