--- a/cv/_sections/education.qmd
+++ b/cv/_sections/education.qmd
@@ -1,16 +1,18 @@
 ### Education
 
-**Georgia Institute of Technology** | 2022–2027\
+**Georgia Institute of Technology** | 2022-2027\
 Ph.D. in Robotics
 
 - GPA: 4.0/4.0
 - Advisor: Dr. Samuel Coogan
 - Goizueta Fellow
 
-**University of Texas at Arlington** | 2018–2022\
+**University of Texas at Arlington** | 2018-2022\
 Honors Bachelor of Science in Electrical Engineering\
-*Minor in Mathematics · Minor in Physics · Certificate in Unmanned Vehicle Systems*
+*Minor in Mathematics*\
+*Minor in Physics*\
+*Certificate in Unmanned Vehicle Systems*
 
-- GPA: 3.9/4.0 — Summa Cum Laude
+- GPA: 3.9/4.0 Summa Cum laude
 - Full National Merit Scholarship Awarded
 - Electrical Engineering Honors Scholar
