--- a/index.qmd
+++ b/index.qmd
@@ -20,9 +20,9 @@ about:
 
 # Welcome to My Research Site!
 
-egm \[at\] gatech.edu
+egm \[at\] gatech \[dot\] edu
 
-evannsmc \[at\] gmail.com
+evannsmc \[at\] gmail \[dot\] com
 
 I am a Robotics/ECE Ph.D student in the Formal Methods & Autonomous Control of Transportation Systems ([FACTS](https://coogan.ece.gatech.edu/)) Lab at the Georgia Institute of Technology under the supervision of Dr. Samuel Coogan.
 
