--- a/cv/resume-html.qmd
+++ b/cv/resume-html.qmd
@@ -1,10 +1,10 @@
 ---
-title: "Resume — Evanns Morales-Cuadrado"
+title: "Résumé — Evanns Morales-Cuadrado"
 toc: true
 ---
 
 ::: {.d-flex .gap-2 .mb-3}
-[← Back to PDFs](index.qmd){.btn .btn-sm .btn-outline-secondary}
+[← Back to CV & Résumé](index.qmd){.btn .btn-sm .btn-outline-secondary}
 <a href="../files/RESUME_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" class="btn btn-sm btn-outline-primary" download>Download PDF</a>
 :::
 
