--- a/cv/cv-html.qmd
+++ b/cv/cv-html.qmd
@@ -4,7 +4,7 @@ toc: true
 ---
 
 ::: {.d-flex .gap-2 .mb-3}
-[← Back to PDFs](index.qmd){.btn .btn-sm .btn-outline-secondary}
+[← Back to CV & Résumé](index.qmd){.btn .btn-sm .btn-outline-secondary}
 <a href="../files/CV_EvannsMoralesCuadrado_NOPERSONALINFO.pdf" class="btn btn-sm btn-outline-primary" download>Download PDF</a>
 :::
 
