--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -4,18 +4,15 @@ toc: true
 toc-depth: 2
 ---
 
-A collection of open-source tools developed through my research at Georgia Tech's FACTS Lab and beyond — from academic document tooling to flight controllers deployed on real hardware. If any of these are useful to your work, a ⭐ on GitHub goes a long way.
+A collection of open-source tools developed through my research at Georgia Tech's FACTS Lab and beyond — from academic document tooling to flight controllers deployed on real hardware.
 
 ---
 
 ## QuartoCV
 
-**A modular, build-system-driven CV and resume template for academics.**
+**A modular, build-system-driven CV and Résumé template for academics.**
 
-::: {.d-flex .gap-2 .mb-3}
-[⭐ Star on GitHub](https://github.com/evannsm/quartoCV){.btn .btn-sm .btn-primary target="_blank"}
-[View Repository](https://github.com/evannsm/quartoCV){.btn .btn-sm .btn-outline-secondary target="_blank"}
-:::
+[View on GitHub](https://github.com/evannsm/quartoCV){.btn .btn-sm .btn-primary target="_blank"}
 
 If you've ever spent more time fighting LaTeX than writing about your research, QuartoCV is for you. It combines Quarto's literate programming model with a smart GNU Make build system that tracks which source sections changed and rebuilds only the affected PDFs — so editing a single shared section automatically propagates across every document that includes it.
 
@@ -40,8 +37,8 @@ The template ships with two distinct style variants and three ready-to-use examp
 **Production-ready ROS 2 packages for indoor quadrotor experiments with Vicon and OptiTrack.**
 
 ::: {.d-flex .gap-2 .mb-3}
-[⭐ Vicon4PX4 on GitHub](https://github.com/evannsm/vicon4px4){.btn .btn-sm .btn-primary target="_blank"}
-[⭐ OptiTrack4PX4 on GitHub](https://github.com/evannsm/optitrack4px4){.btn .btn-sm .btn-primary target="_blank"}
+[Vicon4PX4 on GitHub](https://github.com/evannsm/vicon4px4){.btn .btn-sm .btn-primary target="_blank"}
+[OptiTrack4PX4 on GitHub](https://github.com/evannsm/optitrack4px4){.btn .btn-sm .btn-primary target="_blank"}
 :::
 
 Running indoor flight experiments means solving the same infrastructure problem every time: get your motion-capture system's position data into the drone's state estimator. These two companion packages handle all of it — coordinate frame conversion, EKF fusion, and full-state relay — so you can focus on your controller, not the plumbing.
@@ -65,10 +62,7 @@ Vicon4PX4 has been adopted and showcased by Georgia Tech's Indoor Flight Lab as 
 
 **A research-grade quadrotor controller backed by three peer-reviewed papers.**
 
-::: {.d-flex .gap-2 .mb-3}
-[⭐ Star on GitHub](https://github.com/evannsm/newton_raphson_px4){.btn .btn-sm .btn-primary target="_blank"}
-[View Repository](https://github.com/evannsm/newton_raphson_px4){.btn .btn-sm .btn-outline-secondary target="_blank"}
-:::
+[View on GitHub](https://github.com/evannsm/newton_raphson_px4){.btn .btn-sm .btn-primary target="_blank"}
 
 NR Flow reframes trajectory tracking as an optimization problem solved at each timestep by the Newton-Raphson method — yielding fast, accurate control that is more computationally efficient than NMPC while matching or exceeding its tracking performance. The result: a controller that runs comfortably on a Raspberry Pi 4 onboard a real quadrotor.
 
@@ -99,10 +93,7 @@ Integral Control Barrier Functions (I-CBFs) are baked in to handle actuation lim
 
 **A production-ready Nonlinear Model Predictive Controller for quadrotors.**
 
-::: {.d-flex .gap-2 .mb-3}
-[⭐ Star on GitHub](https://github.com/evannsm/nmpc_acados_px4){.btn .btn-sm .btn-primary target="_blank"}
-[View Repository](https://github.com/evannsm/nmpc_acados_px4){.btn .btn-sm .btn-outline-secondary target="_blank"}
-:::
+[View on GitHub](https://github.com/evannsm/nmpc_acados_px4){.btn .btn-sm .btn-primary target="_blank"}
 
 This package implements a 9-state NMPC using the Acados solver with QPOASES — a rigorous, well-understood approach that was used as the primary comparison baseline for the Newton-Raphson Flow work. If you need a solid NMPC reference implementation for your own quadrotor research, this is a clean starting point.
 
@@ -126,10 +117,7 @@ The controller tracks position, velocity, and Euler angles jointly with a config
 
 **Official Georgia Tech-branded RevealJS presentations, installable in one command.**
 
-::: {.d-flex .gap-2 .mb-3}
-[⭐ Star on GitHub](https://github.com/evannsm/quarto-gatech-slides){.btn .btn-sm .btn-primary target="_blank"}
-[View Repository](https://github.com/evannsm/quarto-gatech-slides){.btn .btn-sm .btn-outline-secondary target="_blank"}
-:::
+[View on GitHub](https://github.com/evannsm/quarto-gatech-slides){.btn .btn-sm .btn-primary target="_blank"}
 
 Co-created with [Brendan Gould](https://github.com/brendangould), this Quarto extension brings official Georgia Tech colors, backgrounds, and typography to RevealJS HTML presentations. Install it into any existing Quarto project with a single terminal command:
 
