update CV/resume PDFs and re-render site

--- a/cv/_sections/service-cv.qmd
+++ b/cv/_sections/service-cv.qmd
@@ -1,4 +1,4 @@
-### Service
+### Service & Leadership
 
 **Co-Founder and President of Puerto Rican Student Association** | Georgia Institute of Technology | Atlanta, GA\
 *August 2024 - Present*
